# pico-i2c-testing

./: .gitignore  CMakeLists.txt  deploy.sh  main.c  uploader  uploader.cpp
